src/test/deca/syntax/valid/expr/test_expr_readfloat.deca
// Description:
//    tests de programme syntaxiquement correct
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2024

{
    float a = readFloat();
}

